--- a/_config.yml
+++ b/_config.yml
@@ -23,16 +23,19 @@ employer         : "Red Brick University"
 
 # Academic websites
 arxiv            : # URL - Update with the correct link to your profile
-googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
-orcid            : "http://orcid.org/yourorcidurl"
-pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  #https://scholar.google.com/citations?user=JnXnvY8AAAAJ&hl=en
+googlescholar    : 
+orcid            : "https://orcid.org/0000-0003-3696-5579"
+pubmed           : "https://pubmed.ncbi.nlm.nih.gov/?term=lieng+mk%5Bau%5D&sort=date&sort_order=desc"
 researchgate     : # URL
 
 # Links 
 # If you don't need one of them, you may delete the corresponding line.
 google_scholar: https://scholar.google.com/
-cv_link: assets/files/curriculum_vitae.pdf
-github_link: https://github.com/
+cv_link: ./assets/files/2024-09_Lieng_CV.pdf
+github_link: https://github.com/mlieng
+instagram_link: https://www.instagram.com/eyecartographer/
+
 #linkedin: https://www.linkedin.com/
 #twitter: https://twitter.com/
 
